public/css/mobile.css
  @media (min-width:300px) and (max-width:700px)
  {
    body
    {
      height: 700px !important;
    }

    header
    {
      position: fixed;
      height: 70px;
    }

    header .user-avatar
    {
      display: none;
    }

    header nav
    {
      display: none !important;
    }

    .mobile-menu
    {
      width: 47px;
      height: 33px;
      background-image: url("../images/icons/open-menu.png");
      background-repeat: no-repeat;
      background-size: contain;
      margin-right: auto;
      cursor: pointer;
      display: block;
    }

    ul.mobile-nav
    {
      width: 67%;
      position: fixed;
      background-color: #09222b;
      font-weight: bold;
      margin: 0;
      padding: 0;
      display: none;
    }

    ul.mobile-nav li
    {
      padding: 18px 30px;
    }

    ul.mobile-nav li:hover
    {
      background-color: #198a9c;
    }

    #header-logo
    {
      margin-right: auto;
    }

    #loginBG
    {
      height: auto;
    }

    #loginBG header
    {
      position: static;
    }

    #loginBG #header-logo
    {
      margin: 0;
    }

    main
    {
      padding-top: 70px;
      min-height: 800px !important;
    }

    .limitation
    {
      width: 92.5% !important;
      justify-content: center !important;
    }

    h2
    {
      font-size: 1.67em;
    }

    #login-form
    {
      width: 80%;
      margin: 0;
    }

    .task
    {
      display: none;
    }

    .task-mobile
    {
      display: block;
    }

    .task-lang
    {
      width: 63px;
      height: 63px;
      margin: 0 16px 0px 0px;
    }

    .task-content p
    {
      margin: 15px 0px;
      text-align: center;
    }

    .task-status
    {
      height: auto;
    }

    .task-status h3
    {
      margin: 0;
    }

    #students-list
    {
      width: 100%;
    }

    #student-tasks
    {
      display: none;
    }

    .student-card .user-avatar
    {
      width: 65px;
      height: 65px;
    }

    .student-task
    {
      justify-content: space-between;
    }

    .student-task .task-lang
    {
      margin-right: 0;
    }

    .student-task .task-status
    {
      flex: 0;
    }

    .student-task .task-status::before
    {
      border-radius: 50%;
      width: 18px;
      height: 18px;
    }

    .student-task .task-done::before
    {
      content: "";
      background-color: #10f025;
    }

    .student-task .task-unresolved::before
    {
      content: "";
      background-color: #730032;
    }

    .Ellipse_595 {

  background-color: rgb(16, 240, 37);
  position: absolute;
  left: 2003px;
  top: 517px;

  z-index: 144;
}


    #snippet-form .form-inputs:first-child
    {
      display: block;
    }

    #snippet-form .form-inputs:first-child input
    {
      margin-bottom: 23px;
    }

    #snippet-form .form-inputs input, #snippet-form .form-inputs select
    {
      width: 100%;
    }

    #snippet-form textarea
    {
      height: 390px;
    }

    .form-inputs
    {
      margin: 23px 0px;
    }

    #task-content-link
    {
      text-align: center;
    }

    #snippet-form .task-status::before
    {
      content: "";
    }

    #snippet-form .form-buttons input[type = "reset"]
    {
      display: none;
    }

    #task-status + label:before
    {
      margin: 0px 15px 0px 0px;
    }

    #task-submit
    {
      margin: 0;
    }

    .back
    {
      display: none;
    }

    #student-information
    {
      flex-flow: column;
      align-items: center;
      text-align: center;
      border: none;
      height: auto;
      padding: 19px 0px 0px 0px;
    }

    #student-information .user-avatar
    {
      width: 176px;
      height: 177px;
    }

    #student-content
    {
      margin: 0;
    }


}

